// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRowHeader header for contributor editor control with all options 1`] = `
<div>
  <div>
    <br />
    Step 2 - Select your name from the list below
  </div>
  <div
    className="columns is-gapless is-mobile contributorsHeader datalist datalist-header"
  >
    <ConfirmDialogBox
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to delete all records?",
          "confirmationTitle": "Delete all",
        }
      }
      onAction={[MockFunction]}
      onRef={[Function]}
    />
    <div
      className="column is-narrow iconSpacer is-hidden-mobile"
    />
    <div
      className="column description datalist-title"
    >
      Name as published
    </div>
    <div
      className="column identifier datalist-title is-hidden-mobile"
    >
      UQ identifier
    </div>
    <div
      className="column is-narrow is-hidden-mobile order datalist-title"
    >
      Reorder records
    </div>
    <div
      className="column is-narrow buttons datalist-buttons"
    >
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        onTouchTap={[Function]}
        tooltip="Remove all records"
        tooltipPosition="top-left"
        touch={false}
      >
        <FontIcon
          className="material-icons"
        >
          delete_forever
        </FontIcon>
      </IconButton>
    </div>
    <div
      className="column is-narrow scrollbar-spacer"
    />
  </div>
</div>
`;

exports[`Component ContributorRowHeader header for contributor editor control with delete all disabled 1`] = `
<div>
  <div
    className="columns is-gapless is-mobile contributorsHeader datalist datalist-header"
  >
    <ConfirmDialogBox
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to delete all records?",
          "confirmationTitle": "Delete all",
        }
      }
      onAction={[MockFunction]}
      onRef={[Function]}
    />
    <div
      className="column is-narrow iconSpacer is-hidden-mobile"
    />
    <div
      className="column description datalist-title"
    >
      Name as published
    </div>
    <div
      className="column is-narrow is-hidden-mobile order datalist-title"
    >
      Reorder records
    </div>
    <div
      className="column is-narrow buttons datalist-buttons"
    >
      <IconButton
        disableTouchRipple={false}
        disabled={true}
        onTouchTap={[Function]}
        tooltip="Remove all records"
        tooltipPosition="top-left"
        touch={false}
      >
        <FontIcon
          className="material-icons"
        >
          delete_forever
        </FontIcon>
      </IconButton>
    </div>
    <div
      className="column is-narrow scrollbar-spacer"
    />
  </div>
</div>
`;

exports[`Component ContributorRowHeader header for contributor editor control with name and delete all button only 1`] = `
<div>
  <div
    className="columns is-gapless is-mobile contributorsHeader datalist datalist-header"
  >
    <ConfirmDialogBox
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to delete all records?",
          "confirmationTitle": "Delete all",
        }
      }
      onAction={[MockFunction]}
      onRef={[Function]}
    />
    <div
      className="column is-narrow iconSpacer is-hidden-mobile"
    />
    <div
      className="column description datalist-title"
    >
      Name as published
    </div>
    <div
      className="column is-narrow is-hidden-mobile order datalist-title"
    >
      Reorder records
    </div>
    <div
      className="column is-narrow buttons datalist-buttons"
    >
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        onTouchTap={[Function]}
        tooltip="Remove all records"
        tooltipPosition="top-left"
        touch={false}
      >
        <FontIcon
          className="material-icons"
        >
          delete_forever
        </FontIcon>
      </IconButton>
    </div>
    <div
      className="column is-narrow scrollbar-spacer"
    />
  </div>
</div>
`;
